# algolabra

./: README.md  pyproject.toml  utilities.py
Dokumentaatio/: Määrittelydokumentti  Viikkoraportti 1  Viikkoraportti 2  Viikkoraportti 3  Viikkoraportti 4  Viikkoraportti 5  Viikkoraportti 6
src/: main.py  utilities.py
src/tests/: utilities_test.py
tests/: utilities_test.py
