[project]
name = "algolabra"
version = "0.1.0"
description = ""
authors = [
    {name = "irelinna",email = "irene.linnanen@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pylint (>=3.3.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.7"
coverage = "^7.9.1"

